--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>Ellie's Page</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
-    <script src="libraries/p5.createloop.js"></script>
-    <script src="libraries/p5.clickable.js"></script>
-    <script src="libraries/addScreenPositionFunction.js"></script>
-    <!-- <script src="libraries/p5.play.js"></script> -->
   </head>
-
   <body>
-    <script src="sketch.js"></script>
+    <header class="header-main">
+      <h1 class ="header-main-text">Ellie Popoca</h1>
+      <nav>
+        <ul class="nav-main">
+          <li><a class="nav-main-text" href="index.html">About</a></li>
+          <li><a class="nav-main-text" href="about.html">Resume</a></li>
+          <li><a class="nav-main-text" href="contact.html">Fun</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div>
+      <img class="header-main-img" src="./assets/slay.png" alt="Ellie">
+    </div>
   </body>
 </html>
