--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <h1 class ="header-main-text">Ellie Popoca</h1>
       <nav>
         <ul class="nav-main">
-          <li><a class="nav-main-text" href="index.html">About</a></li>
-          <li><a class="nav-main-text" href="about.html">Resume</a></li>
-          <li><a class="nav-main-text" href="contact.html">Fun</a></li>
+          <li><a class="nav-main-text hvr-float" href="index.html">About</a></li>
+          <li><a class="nav-main-text hvr-float" href="https://drive.google.com/file/d/1eEP6fEZxlGRZVqWzvAGSOVNfygWUGiQp/view?usp=sharing">Resume</a></li>
+          <li><a class="nav-main-text hvr-float" href="fun.html">Fun</a></li>
         </ul>
       </nav>
     </header>
