Add additional CSS

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <header class="header-main">
-      <h1 class ="header-main-text">Ellie Popoca</h1>
+      <h1 class ="header-main-text"><a class="hvr-float" href="index.html">Ellie Popoca</a></h1>
       <nav>
         <ul class="nav-main">
-          <li><a class="nav-main-text hvr-float" href="index.html">About</a></li>
+          <li><a class="nav-main-text hvr-float" href="about.html">About</a></li>
           <li><a class="nav-main-text hvr-float" href="https://drive.google.com/file/d/1eEP6fEZxlGRZVqWzvAGSOVNfygWUGiQp/view?usp=sharing">Resume</a></li>
           <li><a class="nav-main-text hvr-float" href="fun.html">Fun</a></li>
         </ul>
