--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ellie's Page</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    <link rel="icon" href="./assets/favicon.png" />
   </head>
   <body>
     <header class="header-main">
