--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>About -- Ellie's Page</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="./assets/favicon.png" />
   </head>
   <body>
     <header class="header-main">
