--- a/code.html
+++ b/code.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="/dist/output.css" rel="stylesheet">
+    <link rel="icon" href="./assets/favicon.png" />
   </head>
   <body>
     <!-- Header for all pages  -->
