--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     </header>
     <div class="body-main">
       <img class="header-main-img" src="./assets/slay.png" alt="Ellie">
-      <div class="body-main-center">
-        <h4 class="body-main-text"> hey there! I’m Ellie, a sophomore in Information Sciences and Computer Science at the University of Illiniois at Urbana Champaign! 
+        <div class="body-main-center">
+          <h4 class="body-main-text"> hey there! I’m Ellie, a junior in Information Sciences and Computer Science at the University of Illiniois at Urbana Champaign! 
           <br/> 
           <br/>
           I’m a software developer at Hack4Impact UIUC, and a part-time Major League Hacking Coach!
           <br/>
           <br/>
           I’m an aspiring front end developer with an interest in product design! 
-        </h4>
+          </h4>
         <div class="logos">
           <a href="https://github.com/exrlla">  
             <img class="github-logo" src="./assets/gh.png" alt="github-logo"></a>
