Add part of IDC

--- a/design.html
+++ b/design.html
@@ -103,11 +103,37 @@
             <h3 class="text-3xl header-main-text tracking-tight text-gray-900 sm:text-4xl">research - competitor analyisis!</h3>
             <p class="reg-text-main mt-4 text-gray-500"> I looked into the current Illinois Design Consulting website and analyzed the strengths and weaknesses of the website. 
                 I also looked into other design consulting websites at other campus' to see how they are designed and what they do well! 
+                <br/><br/>
+                We had three main takeaways from my team's analysis! 
+                <br/><br/>   
             </p>
+            <div class="px-8">
+              <ul class="a reg-text-main pb-10">
+                <li class="pb-5">As a goal for the IDC Website, we want to increase the University of Illinois' branding. Many of the design websites we looked at lacked in 
+                  this area, and rather had their own established presence.</li>
+                <li class="pb-5">We want to include community efforts to showcase the community in Illinois Design Consulting, and many of the design websites we looked at do 
+                  this well by providing images, community links, and blogs.</li>
+                <li>It is clear that many of the competitior websites have different audiences they are reaching. For IDC, we wan't to appeal to our clients, students,
+                  and staff and make sure that we include information for all of these audiences
+                  such as our portfolio, staff/student biographies, and client information.</li>
+              </ul> 
+            </div>
+            <img src="./assets/idc-comp-analysis.png" alt="Competitor Analysis of other websites similar to Illinois Design Consulting" class="rounded-lg mt-10">
+          
             <!-- Design Process: Storyboard Mapping -->
             <h3 class="text-3xl header-main-text tracking-tight text-gray-900 sm:text-4xl">Ideate</h3>
             <p class="reg-text-main pb-5 mt-4 text-gray-500">
-                Throughout the ideation process, the team and I created a mapping of different pages, branding, and keeping in mind our intended audience. 
+                Throughout the ideation process, the team and I created a mapping of different pages, branding, and keeping in mind our intended audience.
+                Our Team kept in mind 7 specific groupings in which we thought about areas to improve, and constraints we had with this particular task 
+                <ul class="a reg-text-main text-gray-500 pb-10">
+                  <li>Pages</li>
+                  <li>Branding Colors</li>
+                  <li>Target Audience</li>
+                  <li>UI Elements</li>
+                  <li>Project Showcase</li>
+                  <li>Opportunities</li>
+                  <li>General Problems</li>
+                </ul> 
             </p>
             <img src="./assets/ideate-idc.png" alt="Illinois Design Consulting" class="mb-5 rounded-lg bg-gray-100">
             <img src="./assets/ideate-idc2.png" alt="Illinois Design Consulting" class=" mb-5 rounded-lg bg-gray-100">
