Add back button

--- a/code.html
+++ b/code.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Code Projects -- Ellie's Page</title>
-
-    <link rel="stylesheet" type="text/css" href="style.css">
+   
     <link href="/dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="./assets/favicon.png" />
   </head>
   <body>
@@ -47,7 +47,7 @@
     <div class="bg-white shadow sm:rounded-lg mt-10 ml-20 mr-20 mb-10">
         <div class="px-4 py-5 sm:px-6">
             <img class="pb-5 rounded-lg" src="./assets/7000L-logo.png" alt="hack4impact-logo"></img>
-          <h3 class="text-xl font-mono leading-2 text-gray-900">7000 Languages</h3>
+          <h3 class="project-main-text text-xl mb-5 leading-2 text-gray-900">7000 Languages</h3>
           <p class="mt-1 text-sm text-gray-500">7000 Languages is a non-profit organization that helps indigenous, minority, and refugee communities around the world teach, learn, and sustain their languages through technology. They also strive to support the development of happier, healthier kids, advances in science and more resilient communities. As a part of their mission, 7000 Languages has created 46 courses for over 22 languages and provided access to $11 million worth of technology for $0 charged.</p>
         </div>
         <div class="border-t border-gray-200">
@@ -86,7 +86,7 @@
       <div class="bg-white shadow sm:rounded-lg mt-10 ml-20 mr-20 mb-10">
         <div class="px-4 py-5 sm:px-6">
             <img class="pb-5 rounded-lg" src="./assets/WECE-logo.png" alt="wece-logo"></img>
-          <h3 class="text-xl font-mono leading-2 text-gray-900">Women in Electrical and Computer Engineering at UIUC</h3>
+          <h3 class="project-main-text mb-5 text-xl font-mono leading-2 text-gray-900">Women in Electrical and Computer Engineering at UIUC</h3>
           <p class="mt-1 text-sm text-gray-500">The Women in Electrical and Computer Engineering Student Organization at the University of Illinois at Urbana Champaign is dedicated to providing resources and mentorship to all women and underrepresented genders in Engineering and Technology.</p>
         </div>
         <div class="border-t border-gray-200">
@@ -120,6 +120,7 @@
           </dl>
         </div>
       </div>
+      
 
 
   </body>
