--- a/design.html
+++ b/design.html
@@ -6,8 +6,8 @@
 
     <title>Design Projects -- Ellie's Page</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="icon" href="./assets/favicon.png" />
   </head>
   <body>
@@ -56,4 +56,14 @@
       </div>      
 
     </body>
+    <footer class="a mt-10 pt-10">
+      <div class="reg-text-main flex justify-center">
+        <p>Made with ‎♡‧₊˚ by Ellie
+        </p>
+      </div>
+      <div class="reg-text-main flex justify-center">
+        This site was made from scratch! Check out the code on &nbsp;<a class="text-gray-500" href="https://github.com/exrlla/popoca.io"">Github</a>
+      </div>
+             
+     </footer>
     </html>
