--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>Ellie's Page</title>
 
+    <!-- No Tailwind -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="./assets/favicon.png" />
   </head>
