Fix mobile view

--- a/design.html
+++ b/design.html
@@ -29,10 +29,9 @@
         <h2 class="header-main-text code-proj">Design Projects</h2>
         <img class="w-10 h-12"src="./assets/pinkbling.gif"></img>
     </div>
-    <div class="flex justify-center">
         <p class="reg-text-main flex justify-center">
-        Check out the most recent design projects!
-        </p>
+        Check out my recent projects!
+    </p>
         
     </div>
     <p class="reg-text-main flex justify-center">Looking for code? Check out</p>
@@ -60,9 +59,6 @@
       <div class="reg-text-main flex justify-center">
         <p>Made with ‎♡‧₊˚ by Ellie
         </p>
-      </div>
-      <div class="reg-text-main flex justify-center">
-        This site was made from scratch! Check out the code on &nbsp;<a class="text-gray-500" href="https://github.com/exrlla/popoca.io"">Github</a>
       </div>
              
      </footer>
