--- a/code.html
+++ b/code.html
@@ -44,35 +44,35 @@
     <!-- Code Content Starts Here -->
 
     <!-- 7000 Languages  -->
-    <div class="bg-white shadow sm:rounded-lg mt-10 ml-20 mr-20 mb-10">
-        <div class="px-4 py-5 sm:px-6">
+    <div class="code-container sm:rounded-lg mt-10 lg:ml-4 lg:mr-4 mb-10">
+        <div class="px-4 py-5">
             <img class="pb-5 rounded-lg" src="./assets/7000L-logo.png" alt="hack4impact-logo"></img>
           <h3 class="project-main-text text-xl mb-5 leading-2 text-gray-900">7000 Languages</h3>
           <p class="mt-1 text-sm text-gray-500">7000 Languages is a non-profit organization that helps indigenous, minority, and refugee communities around the world teach, learn, and sustain their languages through technology. They also strive to support the development of happier, healthier kids, advances in science and more resilient communities. As a part of their mission, 7000 Languages has created 46 courses for over 22 languages and provided access to $11 million worth of technology for $0 charged.</p>
         </div>
         <div class="border-t border-gray-200">
           <dl>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class=" px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
               <dt class="text-sm font-mono text-gray-500">Organization</dt>
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 flex flex-row"><img class="h-5 w-5 mr-2" src="./assets/h4iLogo.jpeg" alt="hack4impact-logo"></img><a class="hover:text-indigo-300" href="https://uiuc.hack4impact.org/projects">Hack4Impact UIUC</a></dd>
             </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class=" px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
               <dt class="text-sm font-mono text-gray-500">Technologies</dt>
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">React Native, MongoDB, Redux, AWS, Javascript, HTML, CSS, Nativebase</dd>
             </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class="px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
               <dt class="text-sm font-mono text-gray-500">Timeline</dt>
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">Jan 2022 - Jan 2023</dd>
             </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class="px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
               <dt class="text-sm font-mono text-gray-500">Team</dt>
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">Ananth Koppol, Ashay Parikh, Jocelyn Xu, Madison Park, Alex Masgras, Andy Wong, Eesha Barua, Jamie Rollison, Rustom Ichhaporia, and Xiaofan Li.</dd>
             </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class="px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
               <dt class="text-sm font-mono text-gray-500">Links</dt>
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><a class="hover:text-indigo-300" href="https://github.com/hack4impact-uiuc/7000-languages">Github Repository</a></br><a class="hover:text-indigo-300" href="https://www.7000.org/">7000 Languages Non Profit </a></dd>
             </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class="px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
                 <dt class="text-sm font-mono text-gray-500">Contributions</dt>
                 <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">As a member of the project team 7000 Langauges for the Spring 2022 Semester and the Fall 2022 Semester, I developed frontend componenets and pages throughout the application for the 
                     conrubutor and learner side of the applcation. I worked alongside Ananth, our Product Manager to learn about the product lifecycle of this application and directly worked with our nonprofit clients to scope the remaining semester for the app. 
@@ -83,7 +83,7 @@
       </div>
 
       <!-- Women in ECE -->
-      <div class="bg-white shadow sm:rounded-lg mt-10 ml-20 mr-20 mb-10">
+      <div class="code-container sm:rounded-lg mt-10 mb-10">
         <div class="px-4 py-5 sm:px-6">
             <img class="pb-5 rounded-lg" src="./assets/WECE-logo.png" alt="wece-logo"></img>
           <h3 class="project-main-text mb-5 text-xl font-mono leading-2 text-gray-900">Women in Electrical and Computer Engineering at UIUC</h3>
@@ -91,27 +91,27 @@
         </div>
         <div class="border-t border-gray-200">
           <dl>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class=" px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
               <dt class="text-sm font-mono text-gray-500">Organization</dt>
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 flex flex-row"><a class="hover:text-indigo-300" href="https://wece.ece.illinois.edu/">WECE at Illinois</a></dd>
             </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class=" px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
               <dt class="text-sm font-mono text-gray-500">Technologies</dt>
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">React, MongoDB, Redux, Javascript, HTML, CSS, Bootstrap</dd>
             </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class=" px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
               <dt class="text-sm font-mono text-gray-500">Timeline</dt>
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">Sep 2021 - Present</dd>
             </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class="px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
               <dt class="text-sm font-mono text-gray-500">Team</dt>
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">Joshmita Chintala, Apoorva Sanasi</dd>
             </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class=" px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
               <dt class="text-sm font-mono text-gray-500">Links</dt>
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><a class="hover:text-indigo-300" href="https://github.com/hack4impact-uiuc/7000-languages">Webapp Github Repository</a></br><a class="hover:text-indigo-300" href="https://github.com/hack4impact-uiuc/7000-languages">Link Shortner Github Repository</a></dd>
             </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+            <div class=" px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
                 <dt class="text-sm font-mono text-gray-500">Contributions</dt>
                 <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">As the Infrastructure Director of the Women in Electrical and Computer Engineering Student Organization at the University of Illinois at Urbana Champaign, I am responsible for the development of the organization's web application. 
                     I am also responsible for the development of the organization's link shortner, in which WECE has access to create custom links for their social media platforms, and general meetings. 
