--- a/design/wellapp.html
+++ b/design/wellapp.html
@@ -84,7 +84,7 @@
         </div>
         <!-- Image -->
         <div class="grid sm:gap-6 lg:gap-8">
-          <img src="../assets/wellapp.png" alt="Illinois Design Consulting" class="mb-5 rounded-lg bg-gray-100">
+          <img src="../assets/Wellapp.png" alt="Wellapp" class="mb-5 rounded-lg bg-gray-100">
         </div>
       </div>
 
