--- a/design/idc.html
+++ b/design/idc.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Illinois Design Consulting -- Ellie's Page</title>
+    <title>Illinois Design Consulting — Ellie's Page</title>
 
     <link href="../dist/output.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../style.css">
@@ -33,7 +33,13 @@
           <h4 class="text-style-back">↙ go back to designs! ✧ ˚ · .</h4>
         </a>
       </div>
-      <div class="mx-auto grid w-130 grid-cols-1 items-center gap-y-10 gap-x-8 lg:max-w-9xl lg:grid-cols-2 px-10" >
+      
+      <div class="mx-auto grid w-130 grid-cols-1 items-center gap-y-10 gap-x-8 lg:max-w-9xl lg:grid-cols-1 px-10" >
+        <!-- Image -->
+        <div class="grid sm:gap-6 lg:gap-8 mt-10">
+          <img src="../assets/idc.png" alt="Illinois Design Consulting" class="add-border rounded-lg">
+          <!-- <img src="./assets/idc-screen.png" alt="Illinois Design Consulting" class="rounded-lg bg-gray-100"> -->
+        </div>
         <div>
           <h2 class="text-3xl header-main-text tracking-tight text-gray-900 sm:text-4xl">Illinois Design Consulting Website</h2>
           <p class="reg-text-main mt-4 text-gray-500">
@@ -82,11 +88,6 @@
                   Notion </dd>
             </div>
           </dl>
-        </div>
-        <!-- Image -->
-        <div class="grid sm:gap-6 lg:gap-8">
-          <img src="../assets/idc.png" alt="Illinois Design Consulting" class="mb-5 rounded-lg bg-gray-100">
-          <!-- <img src="./assets/idc-screen.png" alt="Illinois Design Consulting" class="rounded-lg bg-gray-100"> -->
         </div>
       </div>
 
