--- a/design/wellapp.html
+++ b/design/wellapp.html
@@ -34,7 +34,12 @@
           <h4 class="text-style-back">↙ go back to designs! ✧ ˚ · .</h4>
         </a>
       </div>
-      <div class="mx-auto grid w-130 grid-cols-1 items-center gap-y-10 gap-x-8 lg:max-w-9xl lg:grid-cols-2 px-10" >
+
+      <div class="mx-auto grid w-130 grid-cols-1 items-center gap-y-10 gap-x-8 lg:max-w-9xl lg:grid-cols-1 px-10">
+        <!-- Image -->
+        <div class="grid sm:gap-6 lg:gap-8 mt-10">
+          <img src="../assets/Wellapp.png" alt="Wellapp" class="add-border rounded-lg bg-gray-100">
+        </div>
         <div>
           <h2 class="text-3xl header-main-text tracking-tight text-gray-900 sm:text-4xl">Wellapp</h2>
           <p class="reg-text-main mt-4 text-gray-500">
@@ -81,10 +86,6 @@
                   Miro </dd>
             </div>
           </dl>
-        </div>
-        <!-- Image -->
-        <div class="grid sm:gap-6 lg:gap-8">
-          <img src="../assets/Wellapp.png" alt="Wellapp" class="mb-5 rounded-lg bg-gray-100">
         </div>
       </div>
 
