--- a/design.html
+++ b/design.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Design Projects -- Ellie's Page</title>
+    <title>Design Projects — Ellie's Page</title>
 
     <link href="dist/output.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css">
@@ -57,8 +57,7 @@
     </body>
     <footer class="a mt-10 pt-10">
       <div class="reg-text-main flex justify-center">
-        <p>Made with ‎♡‧₊˚ by Ellie
-        </p>
+        <p>Made with ‎♡‧₊˚ by Ellie / <a class="underline"href="https://github.com/exrlla/popoca.io">Source</a></p>
       </div>
              
      </footer>
