--- a/design/idc.html
+++ b/design/idc.html
@@ -41,7 +41,10 @@
           <!-- <img src="./assets/idc-screen.png" alt="Illinois Design Consulting" class="rounded-lg bg-gray-100"> -->
         </div>
         <div>
-          <h2 class="text-3xl header-main-text tracking-tight text-gray-900 sm:text-4xl">Illinois Design Consulting Website</h2>
+          <div class="flex">
+            <img class="logo-main-img mr-2" src="../assets/idc_logo.jpeg">
+            <h2 class="text-3xl header-main-text tracking-tight text-gray-900 sm:text-4xl">Illinois Design Consulting Website</h2>
+          </div>
           <p class="reg-text-main mt-4 text-gray-500">
             The Illinois Design Consulting Organization is under the College of Gies Business at Illinois, and as a Design 
             Consultant for the team, I contributed to creating the mockups, information architecture, and design for the website. 
@@ -108,12 +111,13 @@
               <li class="pb-5">
                 Many of the design websites we looked at lacked and rather had their own established presence.
                 As a goal for the IDC Website, we want to increase the University of Illinois' branding. 
-              
+                We want to include the University of Illinois' branding and colors to make the website more recognizable.
               </li>
               <li class="pb-5">We want to include community efforts to showcase the community in Illinois Design Consulting, and many of the design websites we looked at do 
-                this well by providing images, community links, and blogs.</li>
-              <li>It is clear that many of the competitior websites have different audiences they are reaching. For IDC, we wan't to appeal to our clients, students,
-                and staff and make sure that we include information for all of these audiences
+                this well by providing images, community links, and blogs.
+              </li>
+              <li>The three potential audiences IDC has is Students, Clients, and Staff. The competitor websites have different audiences they are reaching. For IDC, we wan't 
+                to appeal to all three, and make sure that we include information for all of these audiences
                 such as our portfolio, staff/student biographies, and client information.</li>
             </ul> 
           </div>
@@ -191,9 +195,13 @@
           <h3 class="text-3xl header-main-text tracking-tight text-gray-900 sm:text-4xl">learnings + reflections! </h3>
           <p class="reg-text-main mt-4 text-gray-500"> 
             <ul class="a reg-text-main text-gray-500">
-              <li> I got to learn so much about the design process! Asking the right questions is so important! <br/><br/></li>
-              <li>This was my first time conducting user interviews, and I learned so much about the user journey as you go through a product! <br/><br/></li>
-              <li>I got to work on a project team with designers from a variety of backgrounds, and it helped so much getting their feedback!!  </li>
+              <li> I got to learn so much about the design process! Asking the right questions is so important! Knowing to ask WHY is crucial. 
+                A user can do anything but WHY did they do it? (Thanks Allison for this one!)  <br/><br/></li>
+              <li>This was my first time conducting user interviews, and I learned so much about the user journey as you go through a product! 
+                Going from the nav bar, or understanding why a user is going to a certain section of a page is really interesting.<br/><br/></li>
+              <li>I got to work on a project team with designers from a variety of backgrounds, and it helped so much getting their feedback!! 
+                I felt as if though everytime we gave feedback, I came out with more insights on creating a new version 
+              of an interview question or story map, which helped interviews run so much more smoother!  </li>
             </ul> 
           </p>
       </div>
@@ -235,7 +243,7 @@
 
 <footer class="a mt-10 pt-10">
   <div class="reg-text-main flex justify-center">
-    <p>Made with ‎♡‧₊˚ by Ellie
+    <p>Made with ‎♡‧₊˚ by Ellie / <a class="underline"href="https://github.com/exrlla/popoca.io">Source</a>
     </p>
   </div>
          
