--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header class="header-main">
-      <h1 class ="header-main-text"><a class="hvr-float" href="index.html">Ellie Popoca</a></h1>
+      <h1 class ="header-main-text"><a class="hvr-float" href="/">Ellie Popoca</a></h1>
       <nav>
         <ul class="nav-main">
           <li><a class="nav-main-text hvr-float" href="about.html">About</a></li>
@@ -49,6 +49,8 @@
           <a href="https://www.instagram.com/elliescoding/">
             <img class="insta-logo" src="./assets/ig.webp" alt="insta-logo">
           </a>
+          <a href="https://twitter.com/ehllieio">
+            <img class="twt-logo" src="./assets/twt_logo.png" alt="twt-logo">
         </div>
 
         <div class="page-buttons">
@@ -59,8 +61,10 @@
             <button class="design-button">Design</button>
           </a>
         </div>
+        
       </div>
       
   </div>
   </body>
+  
 </html>
